[gd_scene load_steps=9 format=3 uid="uid://bgodwmf5w7qn4"]

[ext_resource type="Script" path="res://Scripts/target_fix.gd" id="1_rf5k8"]
[ext_resource type="Texture2D" uid="uid://bp011ud7j3pfk" path="res://assets/test/concept_02.PNG" id="2_8c2mw"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tengy"]
albedo_texture = ExtResource("2_8c2mw")

[sub_resource type="BoxMesh" id="BoxMesh_ceeda"]
material = SubResource("StandardMaterial3D_tengy")
size = Vector3(1, 1, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_fnt54"]
size = Vector3(1, 1, 0.121155)

[sub_resource type="Animation" id="Animation_hjf1w"]
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node3D/tree_container:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_y0aaf"]
resource_name = "rotate"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-3.14159, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node3D/tree_container:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.533333, 0.966667, 1.23333, 1.4, 1.70729, 2.00729),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1, 1, 1), Vector3(1.5, 1.5, 1.5), Vector3(1, 1, 1), Vector3(1.5, 1.5, 1.5), Vector3(1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l0ccy"]
_data = {
"RESET": SubResource("Animation_hjf1w"),
"rotate": SubResource("Animation_y0aaf")
}

[node name="TargetFix" type="Node3D"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
script = ExtResource("1_rf5k8")

[node name="Node3D" type="Node3D" parent="."]

[node name="SignMeshInstance3D" type="MeshInstance3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_ceeda")
skeleton = NodePath("../..")

[node name="tree_container" type="Node3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, -1, -1.50996e-07, 0, 1.50996e-07, -1, 0, 0, 0)

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0.0346689)
shape = SubResource("BoxShape3D_fnt54")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l0ccy")
}

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
